--- a/index.html
+++ b/index.html
@@ -14,16 +14,30 @@
         <script type="text/babel">
             class App extends React.Component{
                 state = {
-                    name: 'Crystal',
-                    age: 35
+                    name: 'Evan',
+                    age: 25
                 }
                 
+                handleClick(e){
+                    console.log(e.target);
+                    //console.log(this.state);
+                }
+                handleMouseOver(e){
+                    console.log(e.target, e.pageX);
+                }
+                handleCopy(e){
+                    console.log('Try being original for once!');
+                }
                 render() {
                     return (
                         <div className="app-content">
                             <h1>Hey, ninjas</h1>
                             <p>My name is: { this.state.name } and I am { this.state.age }</p>
+                            <button onClick={this.handleClick}>Click me</button>
+                            <button onMouseOver={this.handleMouseOver}>Hover me</button>
+                            <p onCopy={this.handleCopy}>What we think, we become</p>
                         </div>
+                        
                     )
                 }
             }
