--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
                     name: 'Evan',
                     age: 25
                 }
-                
-                handleClick(e){
-                    console.log(e.target);
-                    //console.log(this.state);
+                handleClick = (e) => {
+                    //console.log(e.target);
+                    this.setState({
+                        name: 'Yoshi',
+                        age: 30
+                    })
+                    console.log(this.state);
                 }
-                handleMouseOver(e){
+                handleMouseOver = (e) => {
                     console.log(e.target, e.pageX);
                 }
-                handleCopy(e){
+                handleCopy = (e) => {
                     console.log('Try being original for once!');
                 }
                 render() {
