--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 handleClick = (e) => {
                     //console.log(e.target);
                     this.setState({
-                        name: 'Yoshi',
-                        age: 30
+                        name: e.target.value
                     })
                     console.log(this.state);
                 }
@@ -31,16 +30,24 @@
                 handleCopy = (e) => {
                     console.log('Try being original for once!');
                 }
+                handleChange = (e) => {
+                    this.setState({
+                        name: e.target.value 
+                    });
+                }
+                handleSubmit = (e) => {
+                    e.preventDefault();
+                    console.log('form submitted', this.state.name);
+                }
                 render() {
                     return (
                         <div className="app-content">
-                            <h1>Hey, ninjas</h1>
-                            <p>My name is: { this.state.name } and I am { this.state.age }</p>
-                            <button onClick={this.handleClick}>Click me</button>
-                            <button onMouseOver={this.handleMouseOver}>Hover me</button>
-                            <p onCopy={this.handleCopy}>What we think, we become</p>
+                            <h1>My name is: { this.state.name }</h1>
+                            <form onSubmit={this.handleSubmit}>
+                                <input type="text" onChange={this.handleChange}/>
+                                <button>Submit</button>
+                            </form>
                         </div>
-                        
                     )
                 }
             }
